feat(get_all_prop_accounts)
